[package]
name = "solved-bot"
version = "0.1.0"
authors = ["kiwiyou <kiwiyou.dev@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
anyhow = "1.0.31"
dotenv = "0.15.0"
env_logger = "0.7.1"
log = "0.4.8"
num-format = "0.4.0"
once_cell = "1.4.0"
radix_trie = "0.1.6"
regex = "1.3.9"
reqwest = { version = "0.10.6", features = ["json"] }
serde = { version = "1.0.111", features = ["derive"] }
serde_repr = "0.1.5"
tgbot = "0.10.0"
tokio = { version = "0.2.21", features = ["macros"] }
