[package]
name = "solved-bot"
version = "0.1.0"
authors = ["kiwiyou <kiwiyou.dev@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
anyhow = "1.0.31"
dotenv = "0.15.0"
env_logger = "0.8.3"
fst = "0.4.5"
log = "0.4.8"
num-format = "0.4.0"
once_cell = "1.4.0"
regex = "1.3.9"
reqwest = { version = "0.11.1", features = ["json"] }
serde = { version = "1.0.111", features = ["derive"] }
serde_repr = "0.1.5"
tgbot = "0.12.1"
tokio = { version = "1.2.0", features = ["macros", "rt-multi-thread"] }
